# testFinalProject

./: README.md  pyproject.toml  test_report.html
api/: api_client.py  api_common.py
pages/: base_page.py  city_page.py  city_page_locators.py  index_page.py  index_page_locators.py  offer_page.py  offer_page_locators.py
resources/: constants.py
tests/: conftest.py  test_api.py  test_functionality.py  test_sign_in.py
